# gpu-100-days

./: .gitignore  LICENSE  README.md
D-1/: README.md
D-2/: README.md
D-3/: README.md
day001/: README.md
day002/: README.md
day003/: fused_softmax.ipynb  grayscale.ipynb  pyproject.toml  triton_vector_add.ipynb
day004/: README.md
day005/: README.md
day006/: README.md
day007/: README.md
day008/: README.md
day009/: README.md
day010/: README.md
pytorch_custom_ops/: pixi.toml
pytorch_custom_ops/benchmark/ops/: bench_softmax.py
pytorch_custom_ops/mojo_kernels/: softmax.py
pytorch_custom_ops/src/: grayscale.py  softmax.py
pytorch_custom_ops/src/ops/: grayscale.mojo  softmax.mojo
pytorch_custom_ops/test/ops/: test_grayscale.py  test_softmax.py
