[project]
name = "day003"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
